fix: heimu on dark mode

--- a/src/assets/heimu.css
+++ b/src/assets/heimu.css
@@ -1,12 +1,3 @@
 .heimu {
-  color: black !important;
-  background-color: black;
-  transition:
-    color 150ms,
-    background-color 150ms;
-}
-
-.heimu:hover {
-  color: inherit;
-  background-color: inherit;
+  --at-apply: 'text-black! dark:text-white! bg-black! dark:bg-white! hover:text-inherit! hover:bg-inherit! transition';
 }
